log

Fri 18 Aug 2023 02:31:07 PM UTC: 
 exercises.c | 85 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 81 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:13: error: ‘arrPares’ undeclared (first use in this function); did you mean ‘arregloPares’?
   70 |             arrPares[nuevoIndice] = arr[i];
      |             ^~~~~~~~
      |             arregloPares
exercises.c:70:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
afd78a3
Fri 18 Aug 2023 02:31:48 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:76:12: error: ‘arregloPares’ undeclared (first use in this function); did you mean ‘arrPares’?
   76 |     return arregloPares;
      |            ^~~~~~~~~~~~
      |            arrPares
exercises.c:76:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d78280
